Adds JVM arg to allow access to java.base
Adds a JVM argument to the test task to allow access to the `java.base` module.

This is necessary to avoid `java.lang.reflect.InaccessibleObjectException` exceptions when running tests, especially with newer JDK versions.