@@ -30,6 +30,7 @@ java {
 
 test {
     systemProperty "java.util.logging.manager", "org.jboss.logmanager.LogManager"
+    jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
 }
 compileJava {
     options.encoding = 'UTF-8'
